2010-07-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-01
        * Fix compiler warning in PPrSpareMon.cxx.

2010-07-16  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-00
        * Migration to Light Weight histograms.

2010-06-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-32
        * Fix for bug #69238.

2010-06-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-31
        * Extend shrunk eta bins to JEM/CPM.

2010-06-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-30
        * Minor bug fix.
        * Complete switch to new binning tool.

2010-05-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-29
        * More event number plots for hardware errors.
        * More code tidying.

2010-05-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-28
        * A couple of bug fixes.
        * Add more event number plots for hardware errors.
        * Tidy up some of the code.

2010-05-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-27
        * Update requirements.

2010-05-11  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-26
        * Fix typo in PPrMon.cxx

2010-05-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-25
        * Shrink eta bins to same size.

2010-05-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-24
        * Revise ADC maximum slice plots again.

2010-04-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-23
        * Better eta/phi plots.

2010-04-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-06-22
        * Add tool to give threshold names for bin labels.
